--- a/GlobalWealthPyramid/GlobalWealthPyramid/GlobalWealthPyramid.csproj
+++ b/GlobalWealthPyramid/GlobalWealthPyramid/GlobalWealthPyramid.csproj
@@ -49,8 +49,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Syncfusion.Maui.Charts" Version="100.1.4" />
-	  <PackageReference Include="Syncfusion.Maui.Core" Version="100.1.8" />
+	  <PackageReference Include="Syncfusion.Maui.Charts" Version="*" />
+	  <PackageReference Include="Syncfusion.Maui.Core" Version="*" />
 	</ItemGroup>
 
 </Project>
